--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^11.0.4",
+    "@astrojs/netlify": "^6.0.1",
     "@astrojs/sitemap": "^3.2.1",
     "astro": "^4.13.1",
     "astro-seo": "^0.8.4",
